# m17n-cmake

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml  prebuild.yml
patches/: m17n-lib.patch
